crates/mdbook-rustdoc-links/tests/deserialize_workspace/stderr/data.txt
ERROR mdbook-rustdoc-links: failed to read preprocessor config from book.toml

Caused by:
    TOML parse error at line 12, column 17
       |
    12 |   { workspace = "crates/*" },
       |                 ^^^^^^^^^^
    unknown variant `crates/*`, expected one of `default`, `all`, `none`
    
[LLVM_COV_STDERR]
ERROR mdbook_core::utils: The "rustdoc-links" preprocessor exited unsuccessfully with exit status: 1 status
